# base-api

./: .env.example  Cargo.toml  Makefile  README.md  docker-compose.yaml
.github/workflows/: prod.yml
src/: errors.rs  main.rs  utils.rs
src/db/: pool.rs
src/tests/: health.rs
