[package]
name = "kudos_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
dotenv = "0.15"
thiserror = "1"
chrono = { version = "0.4.31", features= ["serde"] }
diesel = { version = "2.1", features = ["postgres", "chrono", "r2d2"] }
